<?xml version="1.0"?>
<package format="2">
  <name>orb_slam_wrp</name>
  <version>1.0.0</version>
  <description>TODO</description>
  <maintainer email="mateusz.przybyla@put.poznan.pl">Mateusz Przybyla</maintainer>
  <author>Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
